--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui-grid-draggable-rows",
+  "name": "switchable-ui-grid-draggable-rows",
   "version": "0.2.2",
   "authors": [
     "Szymon Krajewski <szykra@gmail.com>"
